<resources>
    <string name="app_name">pavilion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="contents_title">فهرست محتوا</string>
    <string name="ic_build_server">ساخت سرور</string>
    <string name="add_file_with_desc">افزودن فایل با توضیحات</string>
    <string name="ok">ثبت</string>
    <string name="title">عنوان</string>
    <string name="description">توضیحات</string>
    <string name="default_title">عنوان مطلب</string>
    <string name="no_file">__بدون فایل__</string>
    <string name="choose_file">__انتخاب فایل__</string>
    <string name="server_name_hint">نام سرور با حروف کوچک انگلیسی</string>
    <string name="state">وضعیت</string>


    <string name="ic_menu_send_problem">ارسال مشکل</string>
    <string name="ic_menu_send_app">ارسال برنامه به دوستان</string>
    <string name="ic_menu_guid">راهنما و سوالات متداول</string>
    <string name="ic_menu_vote">نظر به برنامه</string>
    <string name="ic_menu_settings">تنظیمات</string>

    <string name="problem_subject">موضوع: مشکل در برنامه</string>

    <string name="title_activity_send_problem">SendProblemActivity</string>
    <string name="title_activity_settings">تنظیمات</string>

    <string name="q1question">متن سوال اول</string>
    <string name="q2question">متن سوال دوم</string>
    <string name="q3question">متن سوال سوم</string>

    <string name="q1message">متن توضیحی سوال اول</string>
    <string name="q2message">متن توضیحی سوال دوم</string>
    <string name="q3message">متن توضیحی سوال سوم</string>

    <string name="email">esmaeil414@gmail.com</string>
</resources>
