<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/start_server"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/ic_build_server"
           />

        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_menu_guid"
            android:title="@string/ic_menu_guid" />
        <item
            android:id="@+id/nav_send_app"
            android:icon="@drawable/ic_menu_send_app"
            android:title="@string/ic_menu_send_app" />
        <item
            android:id="@+id/nav_send_problem"
            android:icon="@drawable/ic_menu_send_problem"
            android:title="@string/ic_menu_send_problem" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/ic_menu_settings" />


    </group>


</menu>
