<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.HelpActivity"
    tools:showIn="@layout/activity_help">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/help_button"
            android:text="@string/q1question"
            android:id="@+id/q1"/>
        <TextView
            style="@style/help_button"
            android:text="@string/q2question"
            android:id="@+id/q2"/>
        <TextView
            style="@style/help_button"
            android:text="@string/q3question"
            android:id="@+id/q3"/>



    </LinearLayout>
</ScrollView>



</RelativeLayout>
