<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_margin"
    android:background="@color/lightGray"
    android:id="@+id/dialogue_layout"
    android:paddingBottom="40dp"
    android:paddingTop="50dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/add_file_with_desc"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialogue_word"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:padding="5dp"
                android:elevation="6dp"
                android:hint="@string/title"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialogue_mean"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:padding="5dp"
                android:elevation="6dp"
                android:hint="@string/description"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="انتخاب فایل"
                android:textColor="@color/purple_dark"
                android:textSize="@dimen/big_title_size"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/dialogue_add"
                android:layout_margin="5dp"
                android:elevation="6dp"
                android:background="@color/colorAccent"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>